--- a/ecwid-shopping-cart/css/admin.css
+++ b/ecwid-shopping-cart/css/admin.css
@@ -1,4 +1,5 @@
 #wpadminbar .ecwid-top-menu-item {
+	margin-top: 0px;
 	width: 23px;
 	height: 28px;
 	background: url(../images/icon-head-default.png) no-repeat 0% 2px;
