--- a/ecwid-shopping-cart/css/settings.css
+++ b/ecwid-shopping-cart/css/settings.css
@@ -52,6 +52,12 @@
 display: none;
 }
 
+@media screen and (max-width: 782px) {
+	.ecwid-settings {
+		width: 100%;
+	}
+}
+
 .ecwid-settings {
 	width: 650px;
 }
