Mobile layout improvements

--- a/ecwid-shopping-cart/css/settings.css
+++ b/ecwid-shopping-cart/css/settings.css
@@ -47,6 +47,35 @@
 	box-shadow: none;
 }
 
+.pure-control-group.small-input > div {
+	display: table-cell;
+	vertical-align: middle;
+	position: relative;
+}
+
+.pure-control-group.small-input .label {
+	width: 265px;
+	font-weight: bold;
+}
+
+.pure-control-group.small-input .input {
+	width: 45px;
+	text-align: center;
+	vertical-align: middle;
+	z-index: 10;
+	position: relative;
+	left: 265px;
+}
+
+.pure-control-group.small-input .input input {
+	margin: 0px auto;
+}
+
+.pure-control-group.small-input .label > * {
+	position: relative;
+	left: -45px;
+}
+
 /* 2.8 compatibility for left menu icon */
 .wp-menu-image>a>img {
 display: none;
