--- a/ecwid-shopping-cart/css/settings.3.8.css
+++ b/ecwid-shopping-cart/css/settings.3.8.css
@@ -69,52 +69,109 @@
 		width: inherit;
 	}
 
+	.ecwid-settings.pure-form fieldset > :not(legend) {
+		margin-left: 0px;
+	}
+
+
+	.general-settings.ecwid-settings .greeting-box {
+		height: inherit;
+		text-align: center;
+	}
+
+	.general-settings.ecwid-settings .greeting-box > div {
+		display: block;
+	}
+	.general-settings.ecwid-settings ol {
+		padding-left: 0px;
+	}
+
+	.general-settings.ecwid-settings .section {
+		width: 100%;
+	}
+
+	.general-settings.ecwid-settings .section .left,
+	.general-settings.ecwid-settings .note {
+		margin-top: 28px;
+	}
+
+	.general-settings.ecwid-settings .section .left,
+	.general-settings.ecwid-settings .section .right {
+		text-align: left;
+		display: block;
+	}
+
+	.general-settings.ecwid-settings button,
+	.general-settings.ecwid-settings #ecwid_store_id,
+	.general-settings.ecwid-settings .pure-button {
+		display: block;
+		width: inherit;
+		margin: 10px 0px 10px 0px;
+		padding: 0px 5px;
+	}
+	.general-settings.ecwid-settings button,
+	.general-settings.ecwid-settings #ecwid_store_id {
+		width: 100%;
+	}
+
+	.general-settings.ecwid-settings .two-buttons .pure-button {
+		display: inline-block;
+		min-width: 40%;
+		width: inherit;
+	}
+
+	.general-settings.ecwid-settings input {
+		display: block;
+		width: 100%;
+	}
+
 	.ecwid-pb-view-size {
 		display: block;
 	}
 
-	.pure-form.ecwid-settings fieldset > :not(legend) {
-		margin-left: 0px;
-	}
 	.ecwid-pb-view-size input {
 		position: relative;
 		z-index: 2;
-	}
-
-	.ecwid-settings .pure-control-group input[type="checkbox"] {
-		position: absolute;
-		top: -0px;
 	}
 
 	.ecwid-settings .pure-control-group {
 		position: relative;
 	}
 
-	.ecwid-settings .pure-control-group.checkbox label {
-		padding-left: 40px;
+	.appearance-settings.ecwid-settings .pure-control-group.small-input input {
+		margin: 0px auto;
 	}
 
-	.ecwid-pb-view-size .ruler {
+	.appearance-settings.ecwid-settings .ecwid-pb-view-size {
+		margin: 0px auto;
+		padding: 0px;
+	}
+
+	.appearance-settings.ecwid-settings .ecwid-pb-view-size .ruler {
 		z-index: 1;
 		position: absolute;
 	}
-	.ecwid-settings .note.pb-note,
-	.ecwid-settings .ecwid-pb-view-size {
-		margin-left: 10px;
-		margin-right: 10px;
+
+	.appearance-settings.ecwid-settings .note.pb-note {
+		margin: 0px;
 	}
 
-
-	.general-settings .greeting-box {
-		height: inherit;
+	.appearance-settings.ecwid-settings select {
+		width: 100%;
 	}
 
-	.general-settings .greeting-box > div {
-		display: block;
+	.advanced-settings.ecwid-settings input,
+	.advanced-settings.ecwid-settings select {
+		width: 100%;
 	}
-	.general-settings ol {
-		padding-left: 0px;
-	}	
+
+	.advanced-settings.ecwid-settings label {
+		margin-bottom: 10px;
+	}
+
+	.advanced-settings.ecwid-settings .note {
+		margin-top: 5px;
+	}
 
 	.ecwid-settings fieldset {
 		min-width: 0px !important;	
@@ -123,11 +180,22 @@
 	.ecwid-pb-view-size .bottom .ruler {
 		bottom: 15px;
 	}
+	.pure-control-group.small-input .input,
+	.pure-control-group.small-input .input input,
+	.pure-control-group.small-input .label > label {
+		position: static;
+	}
 
-	.general-settings .section .left,
-	.general-settings .section .right {
-		text-align: left;
+	.pure-control-group.small-input .label,
+	.pure-control-group.small-input .label label {
+		width: auto;
+	}
+
+	.pure-control-group.small-input .note {
 		display: block;
+		position: relative;
+		left: 45px;
+		margin-right: 45px;
 	}
 }
 
