minor layout improvement

--- a/ecwid-shopping-cart/css/settings.3.8.css
+++ b/ecwid-shopping-cart/css/settings.3.8.css
@@ -189,6 +189,7 @@
 	.pure-control-group.small-input .label,
 	.pure-control-group.small-input .label label {
 		width: auto;
+		margin-bottom: 0px;
 	}
 
 	.pure-control-group.small-input .note {
