Improved scroller adjustment compatibility with possible existing user-defined scroller adjustments

--- a/ecwid-shopping-cart/css/themes/2014.css
+++ b/ecwid-shopping-cart/css/themes/2014.css
@@ -2,7 +2,7 @@
 	max-width: none;
 }
 
-#ecwid_product_browser_scroller {
+#ecwid_product_browser_scroller.ecwid-scroller-adjustment {
 	position: relative;
 	top: -48px;
 }
