VCategories are not hidden on narrow screens now

--- a/ecwid-shopping-cart/css/frontend.css
+++ b/ecwid-shopping-cart/css/frontend.css
@@ -1,4 +1,4 @@
-html#ecwid_html body#ecwid_body div#mini-cart-attached-to-categories.ecwid-cart-narrow-screen, div.ecwid-categories-narrow-screen {
+html#ecwid_html body#ecwid_body div#mini-cart-attached-to-categories.ecwid-cart-narrow-screen, div.ecwid-categories-horizontal.ecwid-categories-narrow-screen {
 	display: none;
 }
 
