--- a/ecwid-shopping-cart/css/themes/responsive-adjustments.css
+++ b/ecwid-shopping-cart/css/themes/responsive-adjustments.css
@@ -46,34 +46,68 @@ html#ecwid_html body#ecwid_body #container .ecwid-categories-category {
 
 /* Minicart */
 
-.ecwid-shopping-cart-minicart {
+html#ecwid_html body#ecwid_body .ecwid-shopping-cart-minicart {
 	position: absolute;
-	right: 0;
-	top: -49px;
+	top: 58px;
+	right: 0px;
+	display: inline-block;
 }
+
 
 html#ecwid_html body#ecwid_body .ecwid-shopping-cart-minicart div.ecwid-minicart-mini {
 	width: 100px;
 	text-align: right;
 }
-
-html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-minicart-mini-rolloverContainer {
-	display: block;
+.ecwid-shopping-cart-minicart {
 	visibility: hidden;
 }
 
+html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-minicart-mini-rolloverContainer {
+	display: block;
+}
+
 html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-shopping-cart-minicart {
-	visibility: hidden;
 	margin-right: 5px;
+	height: 35px;
 }
 
 /* Search */
 
+html#ecwid_html body#ecwid_body.ecwid-shopping-cart .search-cell.search-cell-opening input.ecwid-SearchPanel-field {
+	width: 30px;
+}
+
+html#ecwid_html body#ecwid_body.ecwid-shopping-cart .search-cell.search-cell-open input.ecwid-SearchPanel-field {
+	width: 180px;
+	-webkit-transition: width 0.1s;
+	transition: width 0.1s;
+}
+
 .ecwid-shopping-cart .ecwid-shopping-cart-search {
 	position: absolute;
-	right: 3px;
-	top: -88px;
+	right: 125px;
+	top: 58px;
+	z-index: 1;
+}
+
+.ecwid-shopping-cart .ecwid-shopping-cart-search .ecwid-SearchPanel {
 	display: none;
+	width: 40px;
+}
+
+.ecwid-shopping-cart.ecwid-search-open  .ecwid-search-placeholder {
+	display: none;
+}
+
+.ecwid-shopping-cart.ecwid-search-open .ecwid-shopping-cart-search .ecwid-SearchPanel {
+	display: block;
+	width: 150px;
+	-webkit-transition: width 0.3s;
+	transition: width 0.3s;
+}
+
+.ecwid-shopping-cart-search {
+	white-space: nowrap;
 }
 
 .ecwid-shopping-cart-search .ecwid-SearchPanel-button {
@@ -81,45 +115,58 @@ html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-shopping-cart-minicar
 	background: transparent;
 	line-height: normal;
 	vertical-align: top;
-  padding: 0;
-  margin: 0;
-  width: auto;
-  height: auto;
-}
-
-.ecwid-shopping-cart-search .ecwid-search-placeholder:after,
-.ecwid-shopping-cart-search .ecwid-SearchPanel-button:after
-{
-	content: '\f179';
-	font-family: 'dashicons';
-	font-size: 18px;
-	color: #AAA;
+	padding: 0;
+	margin: 0;
+	width: auto;
+	height: auto;
 }
 
 .ecwid-shopping-cart-search .ecwid-search-placeholder {
+	width: 1px;
+	height: 20px;
 	position: absolute;
-	right: 0px;
-	top: -2px;
+	right: 23px;
+	top: -3px;
+	z-index: 1;
 }
 
-.ecwid-shopping-cart-search input {
-	-webkit-appearance: none;
-	border-radius: 3px;
-	margin-right: -22px;
-	margin-top: -4px;
-	padding: 6px 24px 6px 0;
-	width: 180px;
+.ecwid-shopping-cart .ecwid-search-placeholder:after,
+.ecwid-shopping-cart-search .ecwid-SearchPanel-button:after
+{
+	content: '\f179';
+	font-weight: bold;
+	font-family: 'dashicons';
+	font-size: 18px;
+	color: #AAA;
+	position: relative;
 }
-.ecwid-shopping-cart-search input,
-.ecwid-shopping-cart-search input:focus
+
+.ecwid-shopping-cart .ecwid-search-placeholder:after
+{
+	top: 7px;
+	cursor: pointer;
+}
+
+.ecwid-shopping-cart-search .ecwid-SearchPanel-button
+{
+	height:30px;
+	position: relative;
+	right: 0px;
+}
+
+html#ecwid_html body#ecwid_body .ecwid-shopping-cart-search input,
+html#ecwid_html body#ecwid_body .ecwid-shopping-cart-search input:focus
 {
 	border: 1px solid #D1D1D1;
 	outline: none;
 }
 
-html#ecwid_html body#ecwid_body .ecwid-shopping-cart-search input.ecwid-SearchPanel-field {
+html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-shopping-cart-search input.ecwid-SearchPanel-field {
+	-webkit-appearance: none;
+	border-radius: 3px;
 	margin-right: -24px;
-	margin-top: -6px;
+	padding: 6px 24px 6px 3px;
+	box-shadow: none;
 }
 
 html#ecwid_html body#ecwid_body .ecwid-shopping-cart-search input.ecwid-SearchPanel-field::-webkit-search-cancel-button {
@@ -128,28 +175,48 @@ html#ecwid_html body#ecwid_body .ecwid-shopping-cart-search input.ecwid-SearchPa
 }
 
 /* Auth */
+html#ecwid_html body#ecwid_body .ecwid-shopping-cart-categories {
+	margin-top: 60px;
+}
+
+html#ecwid_html body#ecwid_body .ecwid-shopping-cart-product-browser {
+	margin-top: 50px;
+}
+
+html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-productBrowser-auth-mini,
+html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-shopping-cart-search,
+html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-shopping-cart-minicart {
+	top: -35px;
+	position: absolute;
+}
 
 html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-productBrowser-auth-mini {
-	position: absolute;
-	right: 8px;
-	top: -89px;
-	width: auto;
+	top: -45px;
 }
 
-html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-productBrowser-auth {
-	margin: 0;
+html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-productBrowser-auth-mini {
+	height: 48px;
+	margin-bottom: 5px;
 }
 
-html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-ProductBrowser-auth-anonim,
-html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-ProductBrowser-auth-logged
-{
-	margin-right: 0;
+html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-productBrowser-auth > div {
+	margin-right: 0px;
 }
 
-html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-productBrowser-auth a,
-html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-productBrowser-auth a:active
-{
-	font-size: 14px;
+html#ecwid_html body#ecwid_body.ecwid-with-search .ecwid-productBrowser-auth > div {
+	margin-right: 30px;
+}
+
+html#ecwid_html body#ecwid_body.ecwid-with-minicart .ecwid-productBrowser-auth > div {
+	margin-right: 120px;
+}
+
+html#ecwid_html body#ecwid_body.ecwid-with-minicart.ecwid-with-search .ecwid-productBrowser-auth > div {
+	margin-right: 150px;
+}
+
+html#ecwid_html body#ecwid_body.ecwid-with-minicart.ecwid-with-search.ecwid-search-open .ecwid-productBrowser-auth > div {
+	margin-right: 280px;
 }
 
 /* Product browser */
@@ -267,7 +334,15 @@ html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-shopping-cart-product
 
 	/* Auth */
 	html#ecwid_html body#ecwid_body.ecwid-shopping-cart .ecwid-productBrowser-auth-mini {
-		top: -22px;
+		top: -25px;
+	}
+
+	html#ecwid_html body#ecwid_body .ecwid-productBrowser-auth > div,
+	html#ecwid_html body#ecwid_body.ecwid-with-search .ecwid-productBrowser-auth > div,
+	html#ecwid_html body#ecwid_body.ecwid-with-minicart .ecwid-productBrowser-auth > div,
+	html#ecwid_html body#ecwid_body.ecwid-with-minicart.ecwid-with-search .ecwid-productBrowser-auth > div {
+		margin-right: 0px;
+		white-space: nowrap;
 	}
 
 	/* Minicart */
