--- a/ecwid-shopping-cart/css/store-popup.css
+++ b/ecwid-shopping-cart/css/store-popup.css
@@ -73,7 +73,66 @@
 	display: inherit;
 }
 
+@media only screen and (max-width: 640px), screen and (max-height: 400px) {
+	#ecwid-store-popup-content .media-modal-content .media-frame-title {
+		display: none !important;
+	}
+}
 
+/*
+ * Size and centering
+ */
+
+@media only screen and (min-width: 960px) and (min-height: 660px) {
+
+	html:not(.ie8) #ecwid-store-popup-content .media-modal-content {
+		position: absolute;
+		width: 900px;
+		height: 600px;
+		top: 50%;
+		left: 50%;
+		right: inherit;
+		bottom: inherit;
+		transform: translate(-50%,-50%);
+		-moz-transform: translate(-50%,-50%);
+		-ms-transform: translate(-50%,-50%);
+		-webkit-transform: translate(-50%,-50%);
+	}
+}
+
+@media only screen and (min-width: 960px) and (min-height: 400px) and (max-height: 660px) {
+
+	html:not(.ie8) #ecwid-store-popup-content .media-modal-content {
+		position: absolute;
+		width: 900px;
+		left: 50%;
+		right: inherit;
+		transform: translate(-50%,0%);
+		-moz-transform: translate(-50%,0%);
+		-ms-transform: translate(-50%,0%);
+		-webkit-transform: translate(-50%,0%);
+	}
+}
+
+@media only screen and  (min-width: 640px) and (max-width: 960px) and (min-height: 660px) {
+
+	html:not(.ie8) #ecwid-store-popup-content .media-modal-content {
+		position: absolute;
+		height: 600px;
+		top: 50%;
+		bottom: inherit;
+		transform: translate(0%,-50%);
+		-moz-transform: translate(0%,-50%);
+		-ms-transform: translate(0%,-50%);
+		-webkit-transform: translate(0%,-50%);
+	}
+}
+
+@media only screen and (max-width: 750px) {
+	#ecwid-store-popup-content .store-settings-preview {
+		display: none !important;
+	}
+}
 /*
  *
  */
