Added wp4.0 drop-down menu to mobile view of store edit popup

--- a/ecwid-shopping-cart/css/store-popup.css
+++ b/ecwid-shopping-cart/css/store-popup.css
@@ -53,6 +53,9 @@
 	display: inherit;
 }
 
+body[class*=branch-3] #ecwid-store-popup-content .media-frame-title span.dashicons {
+	display: none;
+}
 /*
  * Content area visibility
  */
