--- a/ecwid-shopping-cart/css/recently-viewed.css
+++ b/ecwid-shopping-cart/css/recently-viewed.css
@@ -36,7 +36,9 @@ html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product:hover .
 	text-decoration: underline;
 }
 
-
+html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product div[itemprop="offers"] {
+	position: static;
+}
 
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product .ecwid-price {
 	position: absolute;
@@ -58,6 +60,7 @@ html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product .ecwid-
 	max-width: 100px;
 	max-height: 100px;
 	margin-right: 10px;
+	vertical-align: middle;
 }
 
 
