--- a/ecwid-shopping-cart/css/recently-viewed.css
+++ b/ecwid-shopping-cart/css/recently-viewed.css
@@ -25,7 +25,7 @@ html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product:focus
 
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product .ecwid-title {
 	position: absolute;
-	left: 115px;
+	left: 120px;
 	top: 15px;
 	overflow: hidden;
 	max-height: 55px;
@@ -42,7 +42,7 @@ html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product div[ite
 
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product .ecwid-price {
 	position: absolute;
-	left: 115px;
+	left: 120px;
 	bottom: 15px;
 }
 
@@ -60,6 +60,7 @@ html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product .ecwid-
 	max-width: 100px;
 	max-height: 100px;
 	margin-right: 10px;
+	margin-left: 10px;
 	vertical-align: middle;
 }
 
