--- a/ecwid-shopping-cart/css/recently-viewed.css
+++ b/ecwid-shopping-cart/css/recently-viewed.css
@@ -78,5 +78,9 @@ html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products.wide .product .e
 	display: table-cell;
 	line-height: 120px;
 	width: 100px;
-	margin: 0px 10px !important;
+	padding: 0px 10px !important;
+}
+
+html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products.wide .product .ecwid-SingleProduct-picture img {
+	margin-top: 0px !important;
 }
