recently viewed products small design changes
Conflicts:
	ecwid-shopping-cart/css/admin.css

--- a/ecwid-shopping-cart/css/admin.css
+++ b/ecwid-shopping-cart/css/admin.css
@@ -150,6 +150,7 @@ div.ecwid-message {
 .widget-top.ecwid-widget-highlighted {
 	background: #1d7ac4;
 	color: white;
+	font-weight: normal;
 }
 
 .ecwid-widget .widget-top h4 {
