--- a/ecwid-shopping-cart/css/recently-viewed.css
+++ b/ecwid-shopping-cart/css/recently-viewed.css
@@ -1,17 +1,29 @@
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product {
 	display: block;
 	position: relative;
-	margin: 5px;
-	border: 1px solid #CCC;
-	opacity: .9;
+	opacity: .85;
 }
+
+html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product:not(:first-child) {
+	border-top: 1px solid #CCC;
+}
+
+
+html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product .ecwid-price {
+	font-size: 14px;
+}
+html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product .ecwid-title {
+	font-size: 12px;
+	height: 2em;
+	line-height: 1em;
+}
+
 
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product.hidden {
 	display: none;
 }
 
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product:hover {
-	border-color: #AAA;
 	cursor: pointer;
 	opacity: 1;
 }
@@ -25,6 +37,8 @@ html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product:focus
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product .ecwid-title {
 	overflow: hidden;
 	max-height: 55px;
+
+	font-size: 12px;
 }
 
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product:hover .ecwid-title {
@@ -56,8 +70,15 @@ html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products.wide .product {
 	height: 120px;
 }
 
+
+html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product .ecwid-title,
+html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products .product .ecwid-price {
+	display: none;
+}
+
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products.wide .product .ecwid-title,
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products.wide .product .ecwid-price {
+	display: block;
 	position: absolute;
 	left: 120px;
 	text-align: left;
@@ -67,6 +88,8 @@ html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products.wide .product .e
 
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products.wide .product .ecwid-title {
 	top: 15px;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 html#ecwid_html body#ecwid_body .ecwid-recently-viewed-products.wide .product .ecwid-price {
